--- a/EinfForsch_01.html
+++ b/EinfForsch_01.html
@@ -68,10 +68,10 @@ class: top, left
 
 Termine:
 * 14 Termine
-* Mittwoch 13:50 - 15:20
+* Mittwoch 09:10 - 10:40
 
 Begleitende Vorlesung:
-* Dienstag 10:50-12:20 (Audimax / P3)
+* Freitag 13:05-14:35 (Audimax / P3)
 * Dozentin: Prof. Dr. Nina Sarubin ([nina.sarubin@charlotte-fresenius-uni.de](mailto:nina.sarubin@charlotte-fresenius-uni.de))
 
 Materialien:
@@ -98,72 +98,72 @@ class: top, left
 &lt;tbody&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 1 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 12.10.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 12.04.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Wie ist Psychologie als Wissenschaft möglich? &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 2 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 19.10.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 19.04.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Wissenschafts- und Erkenntnistheorie &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 3 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 26.10.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 26.04.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Paradigmengeschichte - Menschenbild bestimmt Methode &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 4 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 02.11.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 03.05.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Messen in der Psychologie - manifest &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 5 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 09.11.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 10.05.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Messen in der Psychologie - latent &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 6 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 16.11.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 17.05.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Das Experiment: Alternativerklärungen und Kontrollbedingungen &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 7 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 23.11.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 31.05.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Qualitative Methoden: Verstehen des Einzelfalls &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 8 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30.11.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 07.06.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Leib-Seele Problematik &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 9 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 14.12.2022 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 14.06.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Bio-psychologische Methoden &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 10 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 04.01.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 21.06.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Operationalisierung von Gesundheit und Krankheit &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 11 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 11.01.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 28.06.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Digitale Messmethoden &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 12 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 18.01.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 05.07.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Big Data und Machine-Learning &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 13 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25.01.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 12.07.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Forschungsethik &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; 14 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 01.02.2023 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 19.07.2023 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Freie Spitze und Fragen &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
@@ -401,7 +401,7 @@ class: top, left
   * innere/organismische/dispositionelle Variablen
   * externale/situationale/Umweltvariablen
   
-* **Aufgabe:** Erklären Sie warum Menschen mit dem Rauchen anfangen?
+* **Aufgabe:** Erklären Sie, warum Menschen mit dem Rauchen anfangen?
 
 ---
 class: top, left
@@ -503,7 +503,7 @@ class: top, left
 ]
 
 **Ab 19. Jahrhundert:**
-* **Naturwissenschaften** emanzipieren sich und gegenüber Geisteswissenschaften und Religion 
+* **Naturwissenschaften** emanzipieren sich gegenüber Geisteswissenschaften und Religion 
 * beanspruchen Deutungshoheit über Mensch und Welt
 
 ---
@@ -518,9 +518,9 @@ class: top, left
 
 * mehr noch: Philosophie = Wissenschaft
 
-* systematische **begriffliche Durchdringung** der von Natur- und Geschichtsforschung `\(\rightarrow\)` unablässige Suche nach Wahrheit
+* systematische **begriffliche Durchdringung** der Natur- und Geschichtsforschung `\(\rightarrow\)` unablässige Suche nach Wahrheit
 
-* Fakten und Tatsachen, die die Naturforscher, Sprach- und Geschichtsforscher zusammentrugen, bedurften der philosophischen **Interpretation** (Eingliederung also in philosophisches Weltbild)
+* Fakten und Tatsachen, die die Natur-, Sprach- und Geschichtsforscher zusammentrugen, bedurften der philosophischen **Interpretation** (Eingliederung also in philosophisches Weltbild)
 
 * Wenn Fakten der philosophischen Theorie widersprachen 
 
@@ -557,21 +557,21 @@ class: top, left
 #### Die Welt im Kopf
 
 .center[
-Haben sich sicher schon einmal gefragt...
+Sie haben sich sicher schon einmal gefragt...
 
 "Erlebt mein Gegenüber die Welt genauso wie ich sie erlebe?"
 ]
 **Fragen:**
 
 * Siehst Du, wie ich es tue? 
-* Höhrst Du, wie ich es tue? 
+* Hörst Du, wie ich es tue? 
 * Denkst Du,  wie ich es tue? 
 * Fühlst Du,  wie ich es tue? 
 * Wie kann ich wissen, was in einem Menschen gerade vorgeht?  
 
 **Problem:** 
 
-* Das einzige, was ich sicher weiß, ist, was **ich** sehe, fühle, denke, kurz: was ich erlebe.
+* Das Einzige, was ich sicher weiß, ist, was **ich** sehe, fühle, denke oder kurz: was ich erlebe.
 * Wie und was andere erleben, erleben eben die anderen, und nicht ich selbst.
 * Kann auch zu konkreten Problemen führen (z.B. interpersoneller **Negativity Bias**)
 
@@ -583,14 +583,14 @@ Haben sich sicher schon einmal gefragt...
 .center[
 **Analogieschluss: **
 
-Ich habe ich ein Bewusstsein meiner selbst und der Welt um mich herum 
+Ich habe ein Bewusstsein meiner selbst und der Welt um mich herum 
 
 `\(\downarrow\)`
 
 Andere müssen auch ein solches Bewusstsein haben.
 ]
 
-**ABER:** Was aber berechtigt mich zu diesem Schluss? 
+**ABER:** Was berechtigt mich zu diesem Schluss? 
 
 Ich bediene mich einer **Heuristik**:
 * Ich bin nicht alleine auf der Welt
@@ -622,7 +622,7 @@ Ich bediene mich einer **Heuristik**:
 
 **Dilemma**:
 
-Wie kann über etwas, das ganz allein meine innerste private Erfahrung ist wissenschaftlich etwas ausgesagt werden?
+Wie kann über etwas, das ganz allein meine innerste private Erfahrung ist, wissenschaftlich etwas ausgesagt werden?
 
 ---
 ### Wie ist Psychologie als Wissenschaft möglich?
@@ -864,7 +864,7 @@ Zusammenhang zwischen Reiz- und Erlebnisintensität:
 
 * "Denkpsychologie"
 
-* Forscherkreises zu Beginn des 20. Jahrhunderts
+* Forscherkreis zu Beginn des 20. Jahrhunderts
 
 * begründet durch Oswald Külpe (1862-1915)
 
@@ -894,7 +894,7 @@ Zusammenhang zwischen Reiz- und Erlebnisintensität:
 
 Wissenschaftliche Methodik:
 
-* **Retrospektion** = rückschauenden Selbstbeobachtung
+* **Retrospektion** = rückschauende Selbstbeobachtung
 
 * **Ziel:** experimentelle Erforschung von Denk- und Willensvorgängen
 
@@ -977,7 +977,7 @@ Antwort (nach 10 sec.): „Nein“
 
 * gründet 1879 weltweit erstes **experimentalpsychologisches Laboratorium** (Leipzig)
 
-* Methode: unter **experimentell kontrollierte** Selbstbeobachtung
+* Methode: **experimentell kontrollierte** Selbstbeobachtung
 
 * Experiment `\(\neq\)` ungeschulte („naiven“) Introspektion der persönlichen Alltagserfahrung
 
@@ -1088,9 +1088,9 @@ Neuere Lehrbücher geben Definitionen, die an Wundt anschließen, jedoch weitere
 
 *  Psychologen-Generation nach Wundt begann, Psychisches in seiner Beziehung zu physischen Vorgängen zu betrachten. 
 
-* private,s subjektives Erleben nicht objektiv, d. h. intersubjektiv verbindlich beobachtbar 
+* privates, subjektives Erleben nicht objektiv, d. h. intersubjektiv verbindlich beobachtbar 
 
-* **ABER:** körperlichen Vorgänge (begleiten viele psychischen Vorgänge) sind messbar
+* **ABER:** körperliche Vorgänge (begleiten viele psychische Vorgänge) sind messbar
 
 * **Diskussion:** Wie sehr ist dieser Ansatz haltbar?
 
@@ -1106,14 +1106,14 @@ Neuere Lehrbücher geben Definitionen, die an Wundt anschließen, jedoch weitere
 
 ##### Berühmte Wundt-Schüler
 
-* Wundts Assistenten gehören zu der Gründergeneration der Psychologie als wissenschaftlicher Disziplin 
+* Wundts Assistenten gehören zu der Gründergeneration der Psychologie als wissenschaftliche Disziplin 
 * **Stanley Hall** (1844–1924)   
- * gründete erstes psychologische Laboratorium der USA() Johns Hopkins University)
+ * gründete erstes psychologisches Laboratorium der USA (Johns Hopkins University)
 * **James McKeen Cattell** (1869-1944)
   * Einer der Begründer der Differentiellen und Persönlichkeitspsychologie
 * **Lightner Witmer** (1867-1956)
   * einer der Pioniere der Schulpsychologie
-  * gründete er die erste „psychologische Klinik“ in den USA
+  * gründete die erste „psychologische Klinik“ in den USA
   * prägte den Begriff „klinische Psychologie“.
 * **Edward Bradford Titchener** (1867–1927)
   * Begründer des Strukturalismus
@@ -1131,15 +1131,15 @@ Neuere Lehrbücher geben Definitionen, die an Wundt anschließen, jedoch weitere
 
 ##### Beispiel: Einstellungen
 
-**Implizite Assoziationstest (IAT)**
+**Impliziter Assoziationstest (IAT)**
 
 * Messverfahren in der Sozialpsychologie
 
 * Ziel: Stärke der Assoziationen zwischen einzelnen Elementen des Gedächtnisses messen
 
-* impliziten Messung von Einstellungen (z.B. **Stereotype**)
+* implizite Messung von Einstellungen (z.B. **Stereotype**)
 
-* **Logik:** Personen fällt es leichter (schneller) assoziierte Konzepte mit derselben Antworttaste zu reagieren
+* **Logik:** Personen fällt es leichter (schneller) auf assoziierte Konzepte mit derselben Antworttaste zu reagieren
 ]
 .pull-right[
 .center[
@@ -1153,7 +1153,7 @@ class: top, left
 .content-box-gray[
 * Psychologie befasst sich mit **Verhalten, Erleben und Bewusstsein**
 
-* Ziele psychologischer Forschungsarbeit sind **Beschreibung, Erklärung, Vorhersage Kontrolle**
+* Ziele psychologischer Forschungsarbeit sind **Beschreibung, Erklärung, Vorhersage und Kontrolle**
 
 * Menschen denken seit jeher über ihre Natur nach, wissenschaftliche Psychologie seit **19. Jahrhundert**
 
@@ -1166,7 +1166,6 @@ class: top, left
 * Unterschiedliche Lösungsansätze für Introspektionsproblem führten zu **Paradigmen** der Psychologie
 ]
 
-[**Link zur Wissensüberprüfung**](https://docs.google.com/forms/d/e/1FAIpQLSftQoWUEd9cWrGO6TA7cCMGe3-Jmi38WkKAoFRh_LF0BBWI7A/viewform?usp=sf_link)
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
