--- a/EinfForsch_04.html
+++ b/EinfForsch_04.html
@@ -193,6 +193,7 @@ class: top, left
 
 ##### Reliabilität
 
+&lt;small&gt;
 **Definition:**
 
 * Eine Erhebungsmethode ist (vollständig) reliabel, wenn sie das Merkmal ohne Messfehler misst.
@@ -209,6 +210,8 @@ Es lassen sich 3-4 Arten der Reliabilität unterscheiden:
 
 * (**Testhalbierungs- (Split Half-)Reliabilität**) `\(\rightarrow\)` analog zur innreren Konsistenz (nur Trennung in 2 Teile)
 
+&lt;/small&gt;
+
 ---
 class: top, left
 ### Erhebungsmethoden der psychologischen Forschung
@@ -216,6 +219,8 @@ class: top, left
 ####  Qualitätskriterien von Erhebungsmethoden
 
 ##### Validität
+
+&lt;small&gt;
 
 **Definition:**
 
@@ -229,6 +234,7 @@ Eine Erhebungsmethode ist valide, wenn sie das Merkmal, das sie messen soll, auc
 * **Kriteriumsvalidität**
   * Erhebungsmethode erzeugt Daten, die mit Kriterien des Merkmals korrelieren (z.B. Intelligenztest und Schulnoten)
 
+&lt;/small&gt;
 ---
 class: top, left
 ### Erhebungsmethoden der psychologischen Forschung
@@ -337,6 +343,8 @@ class: top, left
 
 ##### Beispiele für (Verhaltens-)beobachtung in der Psychologie:
 
+&lt;small&gt; 
+
 **Das Marshmellow Experiment (Mischel, 1989)** ([**Link**](https://www.youtube.com/watch?v=QX_oy9614HQ))
 
 * Experiment zum Belohnungsaufschub und zur Impulskontrolle
@@ -354,7 +362,9 @@ class: top, left
   * Andere Person kommt hinzu, die „Rocky“ für sein Verhalten lobt und ihn mit Süßigkeiten belohnt.
   * Andere Person kommt hinzu, tadelt jedoch „Rocky“ und bestraft ihn mit Schlägen und Drohungen.
   * Geschehen bleibt unkommentiert, keine weitere Person tritt auf.
-  
+
+&lt;/small&gt;
+
 ---
 class: top, left
 ### Erhebungsmethoden der psychologischen Forschung
@@ -407,6 +417,8 @@ class: top, left
 
 ##### Annahmen der (Verhaltens-)beobachtung:
 
+&lt;small&gt;
+
 **Was wird beobachtet? -  Kriterien für gute Beobachtungseinheiten:**
 
 * Jede Beobachter:in kann Beobachtungseinheit **zuverlässig identifizieren**.
@@ -422,6 +434,8 @@ class: top, left
 * Beobachtungseinheiten können klar voneinander **abgegrenzt** werden („unterbricht andere“ vs. „redet dazwischen“)
 
 **Tipp:** Beobachtungsplan in einem „Probedurchgang“ testen
+
+&lt;/small&gt;
 
 ---
 class: top, left
@@ -537,21 +551,25 @@ class: top, left
 
 ##### Formen und Rahmenbedingungen für Beobachtungen
 
+&lt;small&gt;
+
 **Wie wird Beobachtung registriert? - Time vs. Event Sampling**
 
 **Event Sampling:**
 
 Registrierung von Häufigkeit und/oder Dauer des Verhaltens- oder Situationsmerkmals über den gesamten Beobachtungszeitraum hinweg
-* es können auch seltene Ereignisse erfasst werden
-* erlaubt Überprüfung von Hypothesen zum Zusammenhang aufeinanderfolgender Ereignisse (Kontingenz)
+  * es können auch seltene Ereignisse erfasst werden
+  * erlaubt Überprüfung von Hypothesen zum Zusammenhang aufeinanderfolgender Ereignisse (Kontingenz)
 
 **Time Sampling** (Spezialfall des event sampling):
 
-* Unterteilung des Beobachtungszeitraums in gleich lange Zeitintervalle
-* Registrierung ob Verhaltensmerkmal im Zeitintervall gezeigt wird
-* Möglichkeit, Pausen einzubauen (z.B. nur in jedem 2. Zeitintervall beobachten)
-* Beobachterrotation möglich (z.B. Beobachter:in 1 im 1. Zeitintervall,  Beobachter:in 2 im 2. Zeitintervall)
-* oft akustischer oder vibrierender Signalgeber notwendig
+  * Unterteilung des Beobachtungszeitraums in gleich lange Zeitintervalle
+  * Registrierung ob Verhaltensmerkmal im Zeitintervall gezeigt wird
+  * Möglichkeit, Pausen einzubauen (z.B. nur in jedem 2. Zeitintervall beobachten)
+  * Beobachterrotation möglich (z.B. Beobachter:in 1 im 1. Zeitintervall,  Beobachter:in 2 im 2. Zeitintervall)
+  * oft akustischer oder vibrierender Signalgeber notwendig
+
+&lt;/small&gt;
 
 ---
 class: top, left
@@ -563,10 +581,14 @@ class: top, left
 
 **Wie wird Beobachtung registriert? - Konstruktion von Ratingskalen**
 
+&lt;small&gt;
+
 * unipolare vs. bipolare Skala
 * Anzahl der Abstufungen: abhängig von Differenzierungsfähigkeit der Beobachter:in und Variation des Merkmals
 * Je mehr Merkmale zu beurteilen sind, desto geringer sollte die Anzahl an Stufen sein
 * Markierung und verbale Verankerung der Skalen: um Abstufungen der Skalen deutlich zu machen, werden diese numerisch/grafisch markiert oder verbal verankert.
+
+&lt;/small&gt;
 
 .pull-left[
 
@@ -598,7 +620,7 @@ class: top, left
 
 ##### Beobachtungsfehler und -verzerrungen (Beispiele)
 
-&lt;table class="table lightable-classic" style='font-size: 17px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
+&lt;table class="table lightable-classic" style='font-size: 15px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Beobachtungsfehler &lt;/th&gt;
@@ -842,7 +864,7 @@ class: top, left
 
 Beispiel: nominales Urteil (ja/nein)
 
-&lt;table class="table lightable-classic" style='font-size: 18px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
+&lt;table class="table lightable-classic" style='font-size: 16px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Vehalten &lt;/th&gt;
@@ -914,7 +936,7 @@ class: top, left
 
 Beispiel: metrisches Urteil (Skala 1-6)
 
-&lt;table class="table lightable-classic" style='font-size: 18px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
+&lt;table class="table lightable-classic" style='font-size: 16px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Vehalten &lt;/th&gt;
@@ -1021,7 +1043,7 @@ class: top, left
 **Prozentuale Übereinstimmung**
 
 .pull-left[
-&lt;table class="table lightable-classic" style='font-size: 18px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
+&lt;table class="table lightable-classic" style='font-size: 16px; margin-left: auto; margin-right: auto; font-family: "Arial Narrow", "Source Sans Pro", sans-serif; margin-left: auto; margin-right: auto;'&gt;
  &lt;thead&gt;
   &lt;tr&gt;
    &lt;th style="text-align:left;"&gt; Vehalten &lt;/th&gt;
